--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ notifications:
   email: false
 
 dist: bionic
-language: c
+language: cpp
 
 branches:
   only:
@@ -11,7 +11,9 @@ branches:
 addons:
   apt:
     packages:
-      - texinfo 
+      - texinfo
+      - ninja-build
+      - python3
 
 install:
   - mkdir riscv-binutils
